# gravity-sim

./: .env.development  .env.production  README.md  env.d.ts  horizons-data-import.html  horizonsdata.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  deploy.yml
docs/: fileformat.md
public/scenarios/: earth-moon.grav  pluto.grav  solar-system.grav
rust/: Cargo.toml  post-process.js  rustfmt.toml
rust/src/: constants.rs  lib.rs  vector3.rs
rust/src/linalg/: mod.rs  vector3.rs
rust/src/ode/: mod.rs  ode.rs  rkf45.rs
rust/src/sim/: constants.rs  mod.rs  object.rs  object_vector.rs  rkf.rs  sim.rs  timing.rs  types.rs
src/: App.vue  Test.vue  colors.scss  gravitySim.ts  main.ts  serializer.ts
src/FileList/: FileList.vue  FileListItem.vue  fileListItemDisplay.ts
src/components/: AppIntroPupup.vue  AppMap.vue  AppMapAcceleration.vue  AppMapBarycenter.vue  AppMapIcons.vue  AppMapObjectLock.vue  AppMapOrbits.vue  AppMapVelocity.vue  AppMenuBottom.vue  AppMenuLoad.vue  AppMenuObjectDetails.vue  AppMenuObjectEdit.vue  AppMenuScenarioDetails.vue  AppMenuScenarioEdit.vue  AppUI.vue  BottomMenu.vue  BottomMenuButton.vue  BottomMenuSection.vue  ErrorMessage.vue  FileList.vue  FileListItem.vue  GraphContainer.vue  GraphControls.vue  LineGraph.vue  LineGraph2D.vue  Map.vue  MapArrow.vue  MapGrid.vue  MapGridAtScale.vue  (+21 more)
tools/: 153-hilda.sh  2dorbits.py  earth-trojans.sh  flatten_orbits.py  horizons-download.py  jupiter.sh  mars.sh  neptune.sh  solar-system-extended.sh  svd.py  svg_star_path.py  uranus.sh
(+255 files in other folders)
