[package]
name = "gravity-sim"
version = "0.1.0"
authors = ["Dirck van den Ende"]
description = "Part of gravity sim written in rust, compiled to WASM"
license = "MIT/Apache-2.0"
repository = "https://github.com/dirckvdende/gravity-sim"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
nalgebra = "0.34.1"