[package]
name = "gravity-sim"
version = "0.1.0"
authors = ["Dirck van den Ende"]
description = "Part of gravity sim written in rust, compiled to WASM"
repository = "https://github.com/dirckvdende/gravity-sim"
edition = "2024"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O', '--enable-bulk-memory']

[lib]
crate-type = ["cdylib"]

[profile.dev]
opt-level = 0

[profile.release]
lto = true
strip = true

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2"